Header: fix menu alignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -14,7 +14,7 @@
       position: relative;
       .icon-bar-left {
         position: absolute;
-        left: -11px;
+        left: 0px;
         top: 29px;
         width: 30%;
         height: 2em;
@@ -61,7 +61,7 @@
         z-index: 99;
         position: absolute;
         top: 20px;
-        right: 3px;
+        right: 15px;
         text-align: right;
         font-size: 16px;
         form {
@@ -185,7 +185,7 @@
     .right-links {
       float: right;
       text-align: right;
-      margin-right: -20px;
+      margin-right: 0;
       display: inline-block;
       width: 40%;
       a {
